--- a/web990/assets/scss/layout/_header.scss
+++ b/web990/assets/scss/layout/_header.scss
@@ -244,7 +244,7 @@ nav.main-menu {
   @include mydevice(mobile) {
     .search-tools,
     .logo-column {
-      display: block;
+      display: block !important;
       width: auto !important;
     }
   }
@@ -297,6 +297,11 @@ nav.main-menu {
   .header-container {
     position: relative;
     background-color: $primary-color;
+    @include mydevice(mobile) {
+      background-color: #fff;
+      padding-bottom: 5px;
+      padding-top: 5px;
+    }
     .row {
       align-items: center;
       display: flex;
@@ -415,6 +420,9 @@ nav.main-menu {
           font-size: 24px;
           color: #fff;
           transition: all 0.3s ease-in-out;
+          @include mydevice(mobile) {
+            color: $primary-color;
+          }
         }
       }
 
